# NUM

./: compressible.cpp  compressible.hpp  main.cpp  starter.txt
archive/: comparison.pvsm
archive/150/: L2.txt  Linf.txt  results.vtk  starter.txt
archive/300/: L2.txt  Linf.txt  results.vtk  starter.txt
archive/450_150/: L2.txt  Linf.txt  starter.txt
archive/900_200/: L2.txt  Linf.txt  starter.txt
archive/upwind/: L2.txt  Linf.txt  results.vtk  starter.txt
examples/GAMM/: starter.txt
examples/flatPlate/: X  Y  starter.txt
fvm/: cellfield.hpp  computeRez.hpp  grid.cpp  grid.hpp  grid_gamm.cpp  grid_gamm.hpp  nodefield.hpp
geometry/: field.hpp  vector.hpp
install/: install.sh  uninstall.sh
results/: L2.txt  Linf.txt  results.vtk
saving/: saveNormRez.cpp  saveNormRez.hpp  saveResults.cpp  saveResults.hpp
sources/: BC.hpp  initialisation.cpp  initialisation.hpp  loadDataFile.hpp  outlet.cpp  outlet.hpp  setGhostCells.cpp  setGhostCells.hpp  setting.cpp  setting.hpp  timeStep.cpp  timeStep.hpp  typedefs.hpp
src/: CMakeLists.txt  compressible.cpp  compressible.hpp  fluxList.cpp  fluxList.hpp  main.cpp  primitiveVars.cpp  primitiveVars.hpp
src/fvm/: CMakeLists.txt  barthJespersen.hpp  cellfield.hpp  computeResidualConv.hpp  computeResidualConvImplicit.hpp  computeResidualDiss.hpp  computeRez.hpp  computeRezImplicit.hpp  firstDerivatives.hpp  grad.hpp  gradLSM.hpp  grid.cpp  grid.hpp  grid_gamm.cpp  grid_gamm.hpp  grid_xy.cpp  grid_xy.hpp  limiter.hpp  setNodeField.hpp  timeIncrement.hpp  timeIncrementFirstOrder.hpp  timeIncrementSecondOrder.hpp  venkatakrishnan.hpp  zeroGrad.hpp  zeroLimiter.hpp
src/geometry/: matrix.hpp  point.hpp  vector.hpp
src/saving/: CMakeLists.txt  saveNormRez.hpp  saveResults.cpp  saveResults.hpp  vtk_output.cpp  vtk_output.hpp
src/sources/: BC.hpp  CMakeLists.txt  findSection.hpp  homogeneousNeumann.cpp  homogeneousNeumann.hpp  homogeneousNeumannJacobian.cpp  homogeneousNeumannJacobian.hpp  initialisation.cpp  initialisation.hpp  inlet.cpp  inlet.hpp  inletJacobian.cpp  inletJacobian.hpp  linearSolver.hpp  noSlipWall.cpp  noSlipWall.hpp  noSlipWallJacobian.cpp  noSlipWallJacobian.hpp  outletJacobian.cpp  outletJacobian.hpp  setGhostCells.cpp  setGhostCells.hpp  setGrid.cpp  setGrid.hpp  setting.cpp  setting.hpp  slipWall.cpp  slipWall.hpp  slipWallJacobian.cpp  slipWallJacobian.hpp  step.hpp  stepExplicit.hpp  stepImplicit.hpp  symmetry.cpp  symmetry.hpp  symmetryJacobian.cpp  symmetryJacobian.hpp  timeStep.cpp  timeStep.hpp  typedefs.hpp  (+2 more)
